# Numerical-Recipes

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: BinaryTricky.cpp  BinaryTricky.h  CMakeLists.txt  calendar.cpp  calendar.h  main.cpp
test/: CMakeLists.txt  TestBinaryTricky.cpp  TestCalendar.cpp  TestMain.cpp
